--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: python
 python:
+    - "2.7"
     - "3.4"
     - "3.5"
-install: "pip install reqs.txt"
-script: "python -m unittest tests.py"
+install: "pip install -r reqs.txt"
+scripts: {
+    "test": "python -m unittest tests.py",
+    "test": "pyflakes main.py"
+}
