--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,4 @@ python:
     - "3.4"
     - "3.5"
 install: "pip install -r reqs.txt"
-scripts: {
-    "test": "python -m unittest tests.py",
-    "test": "pyflakes main.py"
-}
+script: "python -m unittest tests.py; pyflakes main.py"
